# sirius

./: .gitignore  .readthedocs.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sirius.toml  sitemap.xml
.github/workflows/: python-publish.yml
Tutorial/requests/: index.html
docs/: index.md
docs/Tutorial/: requests.md  test.md
search/: search_index.json
sirius/: __init__.py  __main__.py  errors.py  sirius.py  types.py  utils.py
sirius/cli/: __init__.py
sirius/config/: config.py  export.py
sirius/core/: __init__.py  request.py  response.py
sirius/routing/: __init__.py  route.py  router.py
src/routes/: __init__.py  index.py
src/routes/<foo>/: bar.py
tests/: test_sirius.py
