[tool.poetry]
name = "sirius-api"
version = "0.1.2"
description = "Create APIs that shine like a star"
authors = ["Vivaan Verma <hello@vivaanverma.com>"]
license = "MIT"
packages = [{ include = "sirius" }]

[tool.poetry.scripts]
sirius = "sirius.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = { version = "^0.17.1", extras = ["standard"] }
# CLI
click = "^8.0.3"
# Configuration
desert = "^2020.11.18"
marshmallow = "^3.14.1"
attrs = "^21.4.0"
atoml = "^1.1.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^6.2.5"
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
